--- a/Riverport/Riverport.csproj
+++ b/Riverport/Riverport.csproj
@@ -64,26 +64,26 @@
     <Compile Include="Dragontamer\Treat\HealthyTreatCardController.cs" />
     <Compile Include="Dragontamer\Treat\ProteinSnackCardController.cs" />
     <Compile Include="Dragontamer\Treat\TreatCardController.cs" />
-    <Compile Include="Fenrir\ByPaleMoonlightCardController.cs" />
+    <Compile Include="Fenrir\Non-feral\ByPaleMoonlightCardController.cs" />
     <Compile Include="Fenrir\FenrirBaseCardController.cs" />
     <Compile Include="Fenrir\FenrirHumanCharacterCardController.cs" />
     <Compile Include="Fenrir\FenrirTurnTakeController.cs" />
     <Compile Include="Fenrir\FenrirWolfCharacterCardController.cs" />
-    <Compile Include="Fenrir\FrenzyCardController.cs" />
-    <Compile Include="Fenrir\FuriousStrikesCardController.cs" />
-    <Compile Include="Fenrir\GeekAndSunderCardController.cs" />
-    <Compile Include="Fenrir\GreatCleaveCardController.cs" />
-    <Compile Include="Fenrir\HungerOfTheWolfCardController.cs" />
-    <Compile Include="Fenrir\LycanFormCardController.cs" />
-    <Compile Include="Fenrir\MaintainControlCardController.cs" />
-    <Compile Include="Fenrir\MeditateCardController.cs" />
-    <Compile Include="Fenrir\MoonlightInvestigationsCardController.cs" />
-    <Compile Include="Fenrir\NaturalWeaponsCardController.cs" />
-    <Compile Include="Fenrir\OtherHandCardController.cs" />
-    <Compile Include="Fenrir\PaleMoonPendantCardController.cs" />
-    <Compile Include="Fenrir\TameYourselfCardController.cs" />
-    <Compile Include="Fenrir\TransformingHowlCardController.cs" />
-    <Compile Include="Fenrir\UnleashYourselfCardController.cs" />
+    <Compile Include="Fenrir\Feral\FrenzyCardController.cs" />
+    <Compile Include="Fenrir\Feral\FuriousStrikesCardController.cs" />
+    <Compile Include="Fenrir\Feral\GeekAndSunderCardController.cs" />
+    <Compile Include="Fenrir\Feral\GreatCleaveCardController.cs" />
+    <Compile Include="Fenrir\Gimmick\HungerOfTheWolfCardController.cs" />
+    <Compile Include="Fenrir\Gimmick\LycanFormCardController.cs" />
+    <Compile Include="Fenrir\Non-feral\MaintainControlCardController.cs" />
+    <Compile Include="Fenrir\Gimmick\MeditateCardController.cs" />
+    <Compile Include="Fenrir\Non-feral\MoonlightInvestigationsCardController.cs" />
+    <Compile Include="Fenrir\Feral\NaturalWeaponsCardController.cs" />
+    <Compile Include="Fenrir\Non-feral\OtherHandCardController.cs" />
+    <Compile Include="Fenrir\Gimmick\PaleMoonPendantCardController.cs" />
+    <Compile Include="Fenrir\Non-feral\TameYourselfCardController.cs" />
+    <Compile Include="Fenrir\Feral\TransformingHowlCardController.cs" />
+    <Compile Include="Fenrir\Feral\UnleashYourselfCardController.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Weaver\AnansiCardController.cs" />
