To quote Cauldron team, "The Great Refoldering"

--- a/Riverport/Riverport.csproj
+++ b/Riverport/Riverport.csproj
@@ -42,90 +42,91 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dragontamer\Command\BiteCommandCardController.cs" />
-    <Compile Include="Dragontamer\Command\BurnCommandCardController.cs" />
-    <Compile Include="Dragontamer\Command\CommandCardController.cs" />
-    <Compile Include="Dragontamer\Command\CommandPresenceCardController.cs" />
-    <Compile Include="Dragontamer\DragontamerTurnTakerController.cs" />
-    <Compile Include="Dragontamer\Command\WeFightAsOneCardController.cs" />
-    <Compile Include="Dragontamer\Dragon\DragonCardController.cs" />
-    <Compile Include="Dragontamer\Dragon\DrakoCardController.cs" />
-    <Compile Include="Dragontamer\Dragon\ElgorCardController.cs" />
-    <Compile Include="Dragontamer\Dragon\HydraCardController.cs" />
-    <Compile Include="Dragontamer\Dragon\JormunganderCardController.cs" />
-    <Compile Include="Dragontamer\Dragon\TortugaCardController.cs" />
-    <Compile Include="Dragontamer\DragontamerCharacterCardController.cs" />
-    <Compile Include="Dragontamer\Equipment\SerumApplicatorCardController.cs" />
-    <Compile Include="Dragontamer\One-Shot\HereBeDragonsCardController.cs" />
-    <Compile Include="Dragontamer\One-Shot\OnTheFlyCardController.cs" />
-    <Compile Include="Dragontamer\One-Shot\StrategizeCardController.cs" />
-    <Compile Include="Dragontamer\Ongoing\ActiveTrainingCardController.cs" />
-    <Compile Include="Dragontamer\Ongoing\DragonEggCardController.cs" />
-    <Compile Include="Dragontamer\Treat\HealthyTreatCardController.cs" />
-    <Compile Include="Dragontamer\Treat\ProteinSnackCardController.cs" />
-    <Compile Include="Dragontamer\Treat\TreatCardController.cs" />
-    <Compile Include="Fenrir\FenrirBaseCharacterCardController.cs" />
-    <Compile Include="Fenrir\Non-feral\ByPaleMoonlightCardController.cs" />
-    <Compile Include="Fenrir\FenrirBaseCardController.cs" />
-    <Compile Include="Fenrir\FenrirHumanCharacterCardController.cs" />
-    <Compile Include="Fenrir\FenrirTurnTakeController.cs" />
-    <Compile Include="Fenrir\FenrirWolfCharacterCardController.cs" />
-    <Compile Include="Fenrir\Gimmick\FrenzyCardController.cs" />
-    <Compile Include="Fenrir\Feral\FuriousStrikesCardController.cs" />
-    <Compile Include="Fenrir\Feral\GeekAndSunderCardController.cs" />
-    <Compile Include="Fenrir\Feral\GreatCleaveCardController.cs" />
-    <Compile Include="Fenrir\Gimmick\HungerOfTheWolfCardController.cs" />
-    <Compile Include="Fenrir\Gimmick\LycanFormCardController.cs" />
-    <Compile Include="Fenrir\Non-feral\MaintainControlCardController.cs" />
-    <Compile Include="Fenrir\Gimmick\MeditateCardController.cs" />
-    <Compile Include="Fenrir\Non-feral\MoonlightInvestigationsCardController.cs" />
-    <Compile Include="Fenrir\Feral\NaturalWeaponsCardController.cs" />
-    <Compile Include="Fenrir\Non-feral\OtherHandCardController.cs" />
-    <Compile Include="Fenrir\Gimmick\PaleMoonPendantCardController.cs" />
-    <Compile Include="Fenrir\Non-feral\TameYourselfCardController.cs" />
-    <Compile Include="Fenrir\Feral\TransformingHowlCardController.cs" />
-    <Compile Include="Fenrir\Feral\UnleashYourselfCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Command\BiteCommandCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Command\BurnCommandCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Command\CommandCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Command\CommandPresenceCardController.cs" />
+    <Compile Include="Hero\Dragontamer\DragontamerTurnTakerController.cs" />
+    <Compile Include="Hero\Dragontamer\Command\WeFightAsOneCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Dragon\DragonCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Dragon\DrakoCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Dragon\ElgorCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Dragon\HydraCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Dragon\JormunganderCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Dragon\TortugaCardController.cs" />
+    <Compile Include="Hero\Dragontamer\DragontamerCharacterCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Equipment\SerumApplicatorCardController.cs" />
+    <Compile Include="Hero\Dragontamer\One-Shot\HereBeDragonsCardController.cs" />
+    <Compile Include="Hero\Dragontamer\One-Shot\OnTheFlyCardController.cs" />
+    <Compile Include="Hero\Dragontamer\One-Shot\StrategizeCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Ongoing\ActiveTrainingCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Ongoing\DragonEggCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Treat\HealthyTreatCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Treat\ProteinSnackCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Treat\TreatCardController.cs" />
+    <Compile Include="Hero\Fenrir\FenrirBaseCharacterCardController.cs" />
+    <Compile Include="Hero\Fenrir\Non-feral\ByPaleMoonlightCardController.cs" />
+    <Compile Include="Hero\Fenrir\FenrirBaseCardController.cs" />
+    <Compile Include="Hero\Fenrir\FenrirHumanCharacterCardController.cs" />
+    <Compile Include="Hero\Fenrir\FenrirTurnTakeController.cs" />
+    <Compile Include="Hero\Fenrir\FenrirWolfCharacterCardController.cs" />
+    <Compile Include="Hero\Fenrir\Gimmick\FrenzyCardController.cs" />
+    <Compile Include="Hero\Fenrir\Feral\FuriousStrikesCardController.cs" />
+    <Compile Include="Hero\Fenrir\Feral\GeekAndSunderCardController.cs" />
+    <Compile Include="Hero\Fenrir\Feral\GreatCleaveCardController.cs" />
+    <Compile Include="Hero\Fenrir\Gimmick\HungerOfTheWolfCardController.cs" />
+    <Compile Include="Hero\Fenrir\Gimmick\LycanFormCardController.cs" />
+    <Compile Include="Hero\Fenrir\Non-feral\MaintainControlCardController.cs" />
+    <Compile Include="Hero\Fenrir\Gimmick\MeditateCardController.cs" />
+    <Compile Include="Hero\Fenrir\Non-feral\MoonlightInvestigationsCardController.cs" />
+    <Compile Include="Hero\Fenrir\Feral\NaturalWeaponsCardController.cs" />
+    <Compile Include="Hero\Fenrir\Non-feral\OtherHandCardController.cs" />
+    <Compile Include="Hero\Fenrir\Gimmick\PaleMoonPendantCardController.cs" />
+    <Compile Include="Hero\Fenrir\Non-feral\TameYourselfCardController.cs" />
+    <Compile Include="Hero\Fenrir\Feral\TransformingHowlCardController.cs" />
+    <Compile Include="Hero\Fenrir\Feral\UnleashYourselfCardController.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScarletX\Ongoings\BetweenTheShotsCardController.cs" />
-    <Compile Include="ScarletX\Ongoings\AnticipateTheNeedCardController.cs" />
-    <Compile Include="ScarletX\Arrows\DebilitatingArrowCardController.cs" />
-    <Compile Include="ScarletX\Arrows\DetonationArrowCardController.cs" />
-    <Compile Include="ScarletX\OneShots\HunterInstinctCardController.cs" />
-    <Compile Include="ScarletX\OneShots\CallOnTheLightCardController.cs" />
-    <Compile Include="ScarletX\OneShots\QuickestDrawCardController.cs" />
-    <Compile Include="ScarletX\Relics\ArgentLightQuiverCardController.cs" />
-    <Compile Include="ScarletX\Arrows\ArrowBaseCardController.cs" />
-    <Compile Include="ScarletX\Relics\MoonbeamCardController.cs" />
-    <Compile Include="ScarletX\Relics\ScarletMantleCardController.cs" />
-    <Compile Include="ScarletX\Arrows\SappingArrowCardController.cs" />
-    <Compile Include="ScarletX\OneShots\RestockCardController.cs" />
-    <Compile Include="ScarletX\ScarletXCharacterCardController.cs" />
-    <Compile Include="ScarletX\Arrows\SilverArrowCardController.cs" />
-    <Compile Include="ScarletX\Ongoings\WasteNotWantNotCardController.cs" />
-    <Compile Include="ScarletX\Ongoings\ShootFirstCardController.cs" />
-    <Compile Include="Weaver\AnansiCardController.cs" />
-    <Compile Include="Weaver\Equipments\BookOfFateCardController.cs" />
-    <Compile Include="Weaver\Equipments\DivineNeedlesCardController.cs" />
-    <Compile Include="Weaver\Equipments\LoomOfFateCardController.cs" />
-    <Compile Include="Weaver\Ongoings\InspirationStrikesCardController.cs" />
-    <Compile Include="Weaver\Materials\AdrenalweaveCardController.cs" />
-    <Compile Include="Weaver\Materials\AkashaweaveCardController.cs" />
-    <Compile Include="Weaver\Materials\HasteweaveCardController.cs" />
-    <Compile Include="Weaver\Materials\MaterialCardController.cs" />
-    <Compile Include="Weaver\Materials\PhaseweaveCardController.cs" />
-    <Compile Include="Weaver\Materials\PsychweaveCardController.cs" />
-    <Compile Include="Weaver\Ongoings\ResourceReclamationCardController.cs" />
-    <Compile Include="Weaver\Weaves\ReadTheWeaveCardController.cs" />
-    <Compile Include="Weaver\Weaves\PremadeMasterpieceCardController.cs" />
-    <Compile Include="Weaver\Weaves\QuickPatchworkCardController.cs" />
-    <Compile Include="Weaver\Weaves\RaidTheStockpilesCardController.cs" />
-    <Compile Include="Weaver\Weaves\SpoolTheThreadCardController.cs" />
-    <Compile Include="Weaver\Suits\InertiaConduitSuitCardController.cs" />
-    <Compile Include="Weaver\Suits\KevlarShellSuitCardController.cs" />
-    <Compile Include="Weaver\Suits\SuitCardController.cs" />
-    <Compile Include="Weaver\WeaverCharacterCardController.cs" />
-    <Compile Include="Weaver\WeaverTurnTakerController.cs" />
+    <Compile Include="Hero\ScarletX\Ongoings\BetweenTheShotsCardController.cs" />
+    <Compile Include="Hero\ScarletX\Ongoings\AnticipateTheNeedCardController.cs" />
+    <Compile Include="Hero\ScarletX\Arrows\DebilitatingArrowCardController.cs" />
+    <Compile Include="Hero\ScarletX\Arrows\DetonationArrowCardController.cs" />
+    <Compile Include="Hero\ScarletX\OneShots\HunterInstinctCardController.cs" />
+    <Compile Include="Hero\ScarletX\OneShots\CallOnTheLightCardController.cs" />
+    <Compile Include="Hero\ScarletX\OneShots\QuickestDrawCardController.cs" />
+    <Compile Include="Hero\ScarletX\Relics\ArgentLightQuiverCardController.cs" />
+    <Compile Include="Hero\ScarletX\Arrows\ArrowBaseCardController.cs" />
+    <Compile Include="Hero\ScarletX\Relics\MoonbeamCardController.cs" />
+    <Compile Include="Hero\ScarletX\Relics\ScarletMantleCardController.cs" />
+    <Compile Include="Hero\ScarletX\Arrows\SappingArrowCardController.cs" />
+    <Compile Include="Hero\ScarletX\OneShots\RestockCardController.cs" />
+    <Compile Include="Hero\ScarletX\ScarletXCharacterCardController.cs" />
+    <Compile Include="Hero\ScarletX\Arrows\SilverArrowCardController.cs" />
+    <Compile Include="Hero\ScarletX\Ongoings\WasteNotWantNotCardController.cs" />
+    <Compile Include="Hero\ScarletX\Ongoings\ShootFirstCardController.cs" />
+    <Compile Include="Hero\ScarletX\ScarletXTurnTakerController.cs" />
+    <Compile Include="Hero\Weaver\AnansiCardController.cs" />
+    <Compile Include="Hero\Weaver\Equipments\BookOfFateCardController.cs" />
+    <Compile Include="Hero\Weaver\Equipments\DivineNeedlesCardController.cs" />
+    <Compile Include="Hero\Weaver\Equipments\LoomOfFateCardController.cs" />
+    <Compile Include="Hero\Weaver\Ongoings\InspirationStrikesCardController.cs" />
+    <Compile Include="Hero\Weaver\Materials\AdrenalweaveCardController.cs" />
+    <Compile Include="Hero\Weaver\Materials\AkashaweaveCardController.cs" />
+    <Compile Include="Hero\Weaver\Materials\HasteweaveCardController.cs" />
+    <Compile Include="Hero\Weaver\Materials\MaterialCardController.cs" />
+    <Compile Include="Hero\Weaver\Materials\PhaseweaveCardController.cs" />
+    <Compile Include="Hero\Weaver\Materials\PsychweaveCardController.cs" />
+    <Compile Include="Hero\Weaver\Ongoings\ResourceReclamationCardController.cs" />
+    <Compile Include="Hero\Weaver\Weaves\ReadTheWeaveCardController.cs" />
+    <Compile Include="Hero\Weaver\Weaves\PremadeMasterpieceCardController.cs" />
+    <Compile Include="Hero\Weaver\Weaves\QuickPatchworkCardController.cs" />
+    <Compile Include="Hero\Weaver\Weaves\RaidTheStockpilesCardController.cs" />
+    <Compile Include="Hero\Weaver\Weaves\SpoolTheThreadCardController.cs" />
+    <Compile Include="Hero\Weaver\Suits\InertiaConduitSuitCardController.cs" />
+    <Compile Include="Hero\Weaver\Suits\KevlarShellSuitCardController.cs" />
+    <Compile Include="Hero\Weaver\Suits\SuitCardController.cs" />
+    <Compile Include="Hero\Weaver\WeaverCharacterCardController.cs" />
+    <Compile Include="Hero\Weaver\WeaverTurnTakerController.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="DeckLists\DragontamerDeckList.json" />
