--- a/Riverport/Riverport.csproj
+++ b/Riverport/Riverport.csproj
@@ -42,6 +42,52 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Hero\Artificier\Other\DelayedActivationCardController.cs" />
+    <Compile Include="Hero\Artificier\Other\ComplexResearchCardController.cs" />
+    <Compile Include="Hero\Artificier\Equipment\ArcanaRecyclerCardController.cs" />
+    <Compile Include="Hero\Artificier\ArchiveGauntletsCardController.cs" />
+    <Compile Include="Hero\Artificier\ArtificierCharacterCardController.cs" />
+    <Compile Include="Hero\Artificier\ArtificierBaseCardController.cs" />
+    <Compile Include="Hero\Artificier\ArtificierBaseCharacterCardController.cs" />
+    <Compile Include="Hero\Artificier\Enchantments\ConfuseCardController.cs" />
+    <Compile Include="Hero\Artificier\Enchantments\EnchantmentBaseCardController.cs" />
+    <Compile Include="Hero\Artificier\Enchantments\GravityWellCardController.cs" />
+    <Compile Include="Hero\Artificier\Enchantments\HasteCardController.cs" />
+    <Compile Include="Hero\Artificier\Equipment\ManaCollectorCardController.cs" />
+    <Compile Include="Hero\Artificier\Enchantments\SealCardController.cs" />
+    <Compile Include="Hero\Artificier\Equipment\ManaCrystalCardController.cs" />
+    <Compile Include="Hero\Artificier\Equipment\LifeConverterCardController.cs" />
+    <Compile Include="Hero\Artificier\Other\PreparedSpellCardController.cs" />
+    <Compile Include="Hero\Artificier\Other\QuestCompleteCardController.cs" />
+    <Compile Include="Hero\Artificier\Spells\OverloadManaCardController.cs" />
+    <Compile Include="Hero\Artificier\Spells\LeechCardController.cs" />
+    <Compile Include="Hero\Artificier\Spells\SiphonCardController.cs" />
+    <Compile Include="Hero\Artificier\Spells\DispelCardController.cs" />
+    <Compile Include="Hero\Artificier\Spells\ManaBurnCardController.cs" />
+    <Compile Include="Hero\Artificier\Enchantments\ThornsCardController.cs" />
+    <Compile Include="Hero\Artificier\Equipment\SymbioticEvolutionCardController.cs" />
+    <Compile Include="Hero\ArkHive\ArkHiveBaseCardController.cs" />
+    <Compile Include="Hero\ArkHive\ArkHiveBaseCharacterCardController.cs" />
+    <Compile Include="Hero\ArkHive\ArkHiveCharacterCardController.cs" />
+    <Compile Include="Hero\ArkHive\Equipment\FabricationUnitCardController.cs" />
+    <Compile Include="Hero\ArkHive\Equipment\NovasteelChassisCardController.cs" />
+    <Compile Include="Hero\ArkHive\Equipment\PreprocessorCoreCardController.cs" />
+    <Compile Include="Hero\ArkHive\Equipment\RedundantArrayCardController.cs" />
+    <Compile Include="Hero\ArkHive\Equipment\SpareNanobotCardController.cs" />
+    <Compile Include="Hero\ArkHive\One-Shots\ArchiveAccessCardController.cs" />
+    <Compile Include="Hero\ArkHive\One-Shots\DeploySparesCardController.cs" />
+    <Compile Include="Hero\ArkHive\One-Shots\PreemptiveActionCardController.cs" />
+    <Compile Include="Hero\ArkHive\One-Shots\RecallSparesCardController.cs" />
+    <Compile Include="Hero\ArkHive\One-Shots\RecycledIdeasCardController.cs" />
+    <Compile Include="Hero\ArkHive\Plans\AnticipatedCombatCardController.cs" />
+    <Compile Include="Hero\ArkHive\Plans\ArkhivePlanBaseCardController.cs" />
+    <Compile Include="Hero\ArkHive\Plans\DestructiveRecourseCardController.cs" />
+    <Compile Include="Hero\ArkHive\Plans\ExcessiveForceCardController.cs" />
+    <Compile Include="Hero\ArkHive\Plans\HastenedActionCardController.cs" />
+    <Compile Include="Hero\ArkHive\Plans\KnowledgeAndPowerCardController.cs" />
+    <Compile Include="Hero\ArkHive\Plans\RegenerativeOptionCardController.cs" />
+    <Compile Include="Hero\ArkHive\Plans\TerminalDangerCardController.cs" />
+    <Compile Include="Hero\ArkHive\Plans\UnforseenEmpowermentCardController.cs" />
     <Compile Include="Hero\Dragontamer\Command\BiteCommandCardController.cs" />
     <Compile Include="Hero\Dragontamer\Command\BurnCommandCardController.cs" />
     <Compile Include="Hero\Dragontamer\Command\CommandCardController.cs" />
@@ -56,7 +102,7 @@
     <Compile Include="Hero\Dragontamer\DragontamerCharacterCardController.cs" />
     <Compile Include="Hero\Dragontamer\Equipment\SerumApplicatorCardController.cs" />
     <Compile Include="Hero\Dragontamer\FullyEvolvedDragontamerCharacterCardController.cs" />
-    <Compile Include="Hero\Dragontamer\LearningExperienceCardController.cs" />
+    <Compile Include="Hero\Dragontamer\Ongoing\LearningExperienceCardController.cs" />
     <Compile Include="Hero\Dragontamer\One-Shot\HereBeDragonsCardController.cs" />
     <Compile Include="Hero\Dragontamer\One-Shot\OnTheFlyCardController.cs" />
     <Compile Include="Hero\Dragontamer\One-Shot\StrategizeCardController.cs" />
@@ -76,11 +122,10 @@
     <Compile Include="Hero\Fenrir\Feral\GeekAndSunderCardController.cs" />
     <Compile Include="Hero\Fenrir\Feral\GreatCleaveCardController.cs" />
     <Compile Include="Hero\Fenrir\Gimmick\HungerOfTheWolfCardController.cs" />
-    <Compile Include="Hero\Fenrir\Gimmick\LycanFormCardController.cs" />
     <Compile Include="Hero\Fenrir\Non-feral\MaintainControlCardController.cs" />
     <Compile Include="Hero\Fenrir\Gimmick\MeditateCardController.cs" />
     <Compile Include="Hero\Fenrir\Non-feral\MoonlightInvestigationsCardController.cs" />
-    <Compile Include="Hero\Fenrir\Feral\NaturalWeaponsCardController.cs" />
+    <Compile Include="Hero\Fenrir\Non-feral\NaturalWeaponsCardController.cs" />
     <Compile Include="Hero\Fenrir\Non-feral\OtherHandCardController.cs" />
     <Compile Include="Hero\Fenrir\Gimmick\PaleMoonPendantCardController.cs" />
     <Compile Include="Hero\Fenrir\Non-feral\TameYourselfCardController.cs" />
@@ -97,6 +142,7 @@
     <Compile Include="Environment\OnceAgainLabs\Misc\Replic8VatCardController.cs" />
     <Compile Include="Environment\OnceAgainLabs\Scientist\ResearchHandlerCardController.cs" />
     <Compile Include="Environment\OnceAgainLabs\Misc\SpecimenContainmentCardController.cs" />
+    <Compile Include="Hero\Weaver\Patches\PhaseActionPatchCardController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hero\ScarletX\Ongoings\BetweenTheShotsCardController.cs" />
     <Compile Include="Hero\ScarletX\Ongoings\AnticipateTheNeedCardController.cs" />
@@ -120,21 +166,20 @@
     <Compile Include="Hero\Weaver\Equipments\DivineNeedlesCardController.cs" />
     <Compile Include="Hero\Weaver\Equipments\LoomOfFateCardController.cs" />
     <Compile Include="Hero\Weaver\Ongoings\InspirationStrikesCardController.cs" />
-    <Compile Include="Hero\Weaver\Materials\AdrenalweaveCardController.cs" />
-    <Compile Include="Hero\Weaver\Materials\AkashaweaveCardController.cs" />
-    <Compile Include="Hero\Weaver\Materials\HasteweaveCardController.cs" />
-    <Compile Include="Hero\Weaver\Materials\MaterialCardController.cs" />
-    <Compile Include="Hero\Weaver\Materials\PhaseweaveCardController.cs" />
-    <Compile Include="Hero\Weaver\Materials\PsychweaveCardController.cs" />
+    <Compile Include="Hero\Weaver\Patches\AdrenalPatchCardController.cs" />
+    <Compile Include="Hero\Weaver\Patches\GaiaPatchCardController.cs" />
+    <Compile Include="Hero\Weaver\Patches\HasteweaveCardController.cs" />
+    <Compile Include="Hero\Weaver\Patches\PatchCardController.cs" />
+    <Compile Include="Hero\Weaver\Patches\PhaseweaveCardController.cs" />
+    <Compile Include="Hero\Weaver\Patches\PsychweaveCardController.cs" />
     <Compile Include="Hero\Weaver\Ongoings\ResourceReclamationCardController.cs" />
     <Compile Include="Hero\Weaver\Weaves\ReadTheWeaveCardController.cs" />
-    <Compile Include="Hero\Weaver\Weaves\PremadeMasterpieceCardController.cs" />
+    <Compile Include="Hero\Weaver\Weaves\QuickWeavingCardController.cs" />
     <Compile Include="Hero\Weaver\Weaves\QuickPatchworkCardController.cs" />
     <Compile Include="Hero\Weaver\Weaves\RaidTheStockpilesCardController.cs" />
     <Compile Include="Hero\Weaver\Weaves\SpoolTheThreadCardController.cs" />
-    <Compile Include="Hero\Weaver\Suits\InertiaConduitSuitCardController.cs" />
-    <Compile Include="Hero\Weaver\Suits\KevlarShellSuitCardController.cs" />
-    <Compile Include="Hero\Weaver\Suits\SuitCardController.cs" />
+    <Compile Include="Hero\Weaver\Patches\InertiaPatchCardController.cs" />
+    <Compile Include="Hero\Weaver\Patches\KevlarPatchCardController.cs" />
     <Compile Include="Hero\Weaver\WeaverCharacterCardController.cs" />
     <Compile Include="Hero\Weaver\WeaverTurnTakerController.cs" />
   </ItemGroup>
@@ -150,6 +195,10 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="DeckLists\OnceAgainLabsDeckList.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DeckLists\ArkHiveDeckList.json" />
+    <EmbeddedResource Include="DeckLists\ArtificierDeckList.json" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
